Add First Page HTML and CSS

--- a/index.html
+++ b/index.html
@@ -8,6 +8,27 @@
     <title>Quiz</title>
 </head>
 <body>
-    
+    <main>
+        <header class="header">
+            <a href="#" class="logo">FootballQuiz</a>
+
+            <nav class="nav">
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Contact</a>
+            </nav>
+        </header>
+
+        <section class="sec">
+            <div class="sec-middle">
+                <h1>Football Quiz</h1>
+                <p>Test your football quiz knowledge & play our football games online <br>
+                    Different footballers & clubs to solve every day <br>
+                    Prove your elite football knowledge & share your score on social</p>
+                    <button class="start-btn">Start Quiz</button>
+
+            </div>
+        </section>
+    </main>
 </body>
 </html>
