--- a/firstPage.html
+++ b/firstPage.html
@@ -13,7 +13,7 @@
             <a href="firstPage.html" class="logo">FootballQuiz</a>
 
             <nav class="nav">
-                <a href="firstPage.html">Home</a>
+                <a href="firstPage.html" class="active">Home</a>
                 <a href="#">About</a>
                 <a href="#">Contact</a>
             </nav>
@@ -30,5 +30,17 @@
             </div>
         </section>
     </main>
+    <div class="informationcontainer">
+        <h3>Quiz rule</h3>
+        <p class="rule">1.Lorem ipsum, dolor sit amet consectetur </p>
+        <p class="rule">2.Lorem ipsum, dolor sit amet consectetur </p>
+        <p class="rule">3.Lorem ipsum, dolor sit amet consectetur </p><br>
+        <hr>
+
+        <div class="btn1">
+            <button class="informationBtn btn-exit">exit quiz</button>
+            <a href="#" class="informationBtn btn-continue">Continue</a>
+        </div>
+    </div>
 </body>
 </html>
